<resources>
    <string name="app_name">NoteApp</string>
    <string name="general_error">An error occurred!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note_button_desc">Add note button</string>
    <string name="add">Add</string>
    <string name="image_url_optional">Image url - (Optional)</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="note_added">Note added</string>
    <string name="ok">Ok</string>
    <string name="edit_button_info">Edit button</string>
    <string name="success">Success</string>
    <string name="note_image_desc">Note Image</string>
    <string name="edited">Edited</string>
    <string name="delete_button">Delete button</string>
    <string name="user_note_image">User note image</string>
</resources>