<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="noteModel"
            type="com.maden.noteapp.data.local.dto.NoteModel" />
    </data>


    <LinearLayout
        android:id="@+id/noteItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/note_image_desc"
            android:scaleType="centerCrop"
            app:downloadImageWithUrl="@{noteModel.photoUrl}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:text="@{noteModel.title}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:text="@{noteModel.description}" />
                <!--

                -->
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{noteModel.date}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="end"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/delete_button"
                    android:src="@drawable/ic_delete" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/edited"
                    android:visibility="gone"
                    android:textSize="12sp"
                    app:editedChip="@{noteModel.edited}"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>